# OpenGL-Game

./: CMakeLists.txt  README.md
src/: Scene.h  State.h  main.cpp  utils.cpp  utils.h
src/parse/: MapParser.cpp  MapParser.h
src/repr/: Map.cpp  Map.h
test/: CMakeLists.txt  invalid.txt  test_file_reader.cpp
